# tch-utils

./: .gitignore  Cargo.toml  README.md  index.html  readme.md
.github/workflows/: doc.yml  rust-doc.yml  rust.yml
assert-assets/: centered_rotated_ellipse.pt  ellipse.pt  offset_circle.pt  rotated_ellipse.pt
assert-assets/shapes/: hourglass_hull.pt  square.pt  square_hull.pt  triangle.pt
src/: color.rs  gabor.rs  glcm.rs  glrlm.rs  image.rs  jit.rs  lib.rs  ndarray.rs  noise.rs  ops_2d.rs  shapes.rs  tensor_ext.rs  tensor_init.rs  utils.rs
tch-utils-macros/: Cargo.toml
tch-utils-macros/src/: lib.rs  to_jit.rs
test-assets/colors/: hed.npy  hsv.npy  original.npy
test-assets/shapes/: centered_circle.pt  pentagon.pt
