[package]
name = "tch-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rayon"]
rayon = ["dep:rayon"]

[dependencies]
tch = "0"
rand = "0.8"
rayon = { version = "1.5", optional = true }
