[package]
name = "tch-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rayon", "ndarray", "image"]
rayon = ["dep:rayon"]
ndarray = ["dep:ndarray", "dep:ndarray-npy"]
image = ["dep:image"]

[dependencies]
tch = "0"
rand = "0.8"
rayon = { version = "1.5", optional = true }
ndarray = { version = "0.15", optional = true }
ndarray-npy = { version = "0.8", optional = true }
image = { version = ">=0.20", optional = true }
